Bug 60817 - System freeze when keymap specified by keymap_layout option in weston.ini can't be found
Summary: System freeze when keymap specified by keymap_layout option in weston.ini can...
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-13 21:15 UTC by Rune K. Svendsen
Modified: 2013-02-18 22:02 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
output of running weston-launch through strace when the freeze occurs (60.61 KB, text/plain)
2013-02-13 21:15 UTC, Rune K. Svendsen
Details

Description Rune K. Svendsen 2013-02-13 21:15:33 UTC
Created attachment 74783 [details]
output of running weston-launch through strace when the freeze occurs

The following step reproduces the bug for me:

1. Add the following two lines to weston.ini:

[keyboard]
keymap_layout=en

This should make weston freeze on startup, and produce an unresponsive system that can only be recovered with Alt+SysRq+REISUB

According to the log, weston tries to read the file /usr/share/X11/xkb/symbols/en which doesn't exist. I'm attaching the full output of stracing weston-launch.
Comment 1 Scott Moreau 2013-02-13 21:19:47 UTC
(In reply to comment #0)
> Created attachment 74783 [details]
> output of running weston-launch through strace when the freeze occurs
> 
> The following step reproduces the bug for me:
> 
> 1. Add the following two lines to weston.ini:
> 
> [keyboard]
> keymap_layout=en
> 
> This should make weston freeze on startup, and produce an unresponsive
> system that can only be recovered with Alt+SysRq+REISUB
> 
> According to the log, weston tries to read the file
> /usr/share/X11/xkb/symbols/en which doesn't exist. I'm attaching the full
> output of stracing weston-launch.

I have tested and I can reproduce this problem.
Comment 2 Kristian Høgsberg 2013-02-18 22:02:06 UTC
commit 2f07ef6963a81cffabdac33c19c413db5bebc499
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Sat Feb 16 14:29:24 2013 -0500

    xkb: Don't call exit on failure in weston_compositor_xkb_init()
    
    This will exit without cleaning vt modes and leave the system stuck.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=60817

which will catch xkb errors (and other input errors) during startup.  Errors during hotplug continue to result in the device being ignored, but I think that's fair.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.